# DS_template

./: README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .gitignore  pyproject.toml
