[tool.poetry]
name = "{{ cookiecutter.directory_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^23.3.0"
flake8-isort = "^6.0.0" # предупреждение о неправильной позиции импорта в файле согласно настройкам isort
flake8-builtins = "^2.1.0" # предупреждение об использовании стандартных имен python в нейминге переменных
flake8-blind-except = "^0.2.1" # предупреждение об использовании except без аргумента
flake8-debugger = "^4.1.2" # предупреждение об использовании дебаггера в коде
flake8-tuple = "^0.4.1" # предупреждение об использовании кортежей из одного элемента. пример, return some_parameter,
flake8-quotes = "^3.3.2" # предупреждение об использовании двойных ковычек
flake8-eradicate = "^1.2.0"  # предупреждение об использовании мертвого кода
flake8-broken-line = "^1.0.0"  # предупреждение о переносе строк
flake8-comprehensions = "^3.14.0"  # форматирование comprehensions
flake8-bugbear = "^23.6.5" # предупреждает о возможных багах и проблемах дизайна
flake8 = "^6.0.0"
python-json-logger = "^2.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
known_first_party = "app"
known_third_party = "pydantic"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
balanced_wrapping = true
lines_after_imports = 2
lines_between_sections = 1
skip = ["protos", ".git",".vscode", ".idea", "env",".env",".venv",".pytest_cache",".mypy_cache","__init__.py"]


[tool.black]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
extend_exclude = "protos"
